--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@ body {
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
     
-    --primary: 344 79% 52%; /* D50032 */
+    --primary: 217 91% 60%; /* #3B82F6 */
     --primary-foreground: 0 0% 98%;
 
     --secondary: 0 0% 14.9%;
@@ -34,7 +34,7 @@ body {
 
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
-    --ring: 344 79% 52%;
+    --ring: 217 91% 60%;
 
     --radius: 0.5rem;
   }
@@ -49,7 +49,7 @@ body {
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
 
-    --primary: 344 79% 52%; /* D50032 */
+    --primary: 217 91% 60%; /* #3B82F6 */
     --primary-foreground: 0 0% 98%;
     
     --secondary: 0 0% 14.9%;
@@ -66,7 +66,7 @@ body {
 
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
-    --ring: 344 79% 52%;
+    --ring: 217 91% 60%;
   }
 }
 
