--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,8 +8,8 @@ body {
 
 @layer base {
   :root {
-    --background: 0 0% 9%; /* 1C1C1C */
-    --foreground: 0 0% 98%;
+    --background: 0 0% 0%; /* #000000 */
+    --foreground: 0 0% 98%; /* #FAFAFA */
     
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
@@ -17,7 +17,7 @@ body {
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
     
-    --primary: 217 91% 60%; /* #3B82F6 */
+    --primary: 0 84.2% 60.2%; /* #FF1818 */
     --primary-foreground: 0 0% 98%;
 
     --secondary: 0 0% 14.9%;
@@ -26,22 +26,22 @@ body {
     --muted: 0 0% 14.9%;
     --muted-foreground: 0 0% 63.9%;
 
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
+    --accent: 0 0% 82.7%; /* #D3D3D3 */
+    --accent-foreground: 0 0% 9%;
 
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
 
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
-    --ring: 217 91% 60%;
+    --ring: 0 84.2% 60.2%;
 
     --radius: 0.5rem;
   }
 
   .dark {
-    --background: 0 0% 9%; /* 1C1C1C */
-    --foreground: 0 0% 98%;
+    --background: 0 0% 0%; /* #000000 */
+    --foreground: 0 0% 98%; /* #FAFAFA */
 
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
@@ -49,7 +49,7 @@ body {
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
 
-    --primary: 217 91% 60%; /* #3B82F6 */
+    --primary: 0 84.2% 60.2%; /* #FF1818 */
     --primary-foreground: 0 0% 98%;
     
     --secondary: 0 0% 14.9%;
@@ -58,15 +58,15 @@ body {
     --muted: 0 0% 14.9%;
     --muted-foreground: 0 0% 63.9%;
     
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
+    --accent: 0 0% 82.7%; /* #D3D3D3 */
+    --accent-foreground: 0 0% 9%;
     
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
 
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
-    --ring: 217 91% 60%;
+    --ring: 0 84.2% 60.2%;
   }
 }
 
