--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@ body {
 
 @layer base {
   :root {
-    --background: 220 2% 14%; /* #232426 */
+    --background: 0 0% 10%; /* #1a1a1a */
     --foreground: 0 0% 98%; /* #FAFAFA */
     
     --card: 0 0% 3.9%;
@@ -40,7 +40,7 @@ body {
   }
 
   .dark {
-    --background: 220 2% 14%; /* #232426 */
+    --background: 0 0% 10%; /* #1a1a1a */
     --foreground: 0 0% 98%; /* #FAFAFA */
 
     --card: 0 0% 3.9%;
